--- a/public/css/favrecipe.css
+++ b/public/css/favrecipe.css
@@ -6,12 +6,10 @@ a {
   vertical-align: middle;
 }
 
-h1{
-  margin-top: 0;
-}
-
 h4{
   text-align: center;
+  font-size: 2rem;
+  margin: 20px auto;
 }
 
 ul {
@@ -30,21 +28,30 @@ img {
   border-radius: 2px;
 }
 
+.title{
+  font-size: 1.2rem;
+  display: inline;
+  vertical-align: middle;
+}
+
 .row{
-  line-height: 25px;
+  line-height: 20px;
   display: inline-flex;
   vertical-align: middle;
-  margin: 5px auto;
+  margin: 2px auto;
   border-top: 1px solid #545454;
   border-bottom: 1px solid #545454;
   padding: 5px 1px;
-  font: 1.5em;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+
 
 .masonry { /* Masonry container */
     column-count: 4;
     column-gap: 1em;
-    margin: 0 20px;
+    margin: 2px 20px;
+    border-bottom: 1px solid #545454;
 }
 
 .item { /* Masonry bricks or child elements */
@@ -60,6 +67,11 @@ img {
   border-bottom: 1px solid #545454;
   padding: 5px;
   margin: 5px 5px;
+  text-align: left;
+}
+
+span{
+  font-style: italic;
 }
 
 .delete{
@@ -72,18 +84,57 @@ img {
 }
 
 .material-icons{
+  font-size: 1.0rem;
+}
+
+.deleteAll{
+  margin: 5px;
   font-size: 1.5rem;
+  text-align: right;
+}
+
+#delete{
+  background-color: rgba(0,0,0,0);
+  border: none;
+  color: #545454;
+  cursor: pointer;
+}
+
+#delete:hover{
+  background-color: red;
+  color: white;
+}
+
+
+
+/*.deleteAll:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+}
+
+div{
+overflow: auto;}*/
+
+#commentbox{
+  font-size: 1rem;
+  width: 60%;
 }
 
 .blockbutt{
   display: block;
   margin: 2px auto;
   cursor: pointer;
+  font-size: 1rem;
   /*background-color: #F1D1A0;*/
 }
 
 .butt{
   cursor: pointer;
   margin: 2px auto;
+  font-size: 1rem;
   /*background-color: #F1D1A0;*/
 }
