--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="/css/search.css">
 
 <div class="search">
-  <input class="search-box" type="text" placeholder="Chicken" name="query" id="inputBox" />
+  <input class="search-box" type="text" placeholder="" name="query" id="inputBox" />
   <i id="ingredientsSearch" class="material-icons">search</i>
 </div>
 
