--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
   <body>
     <div class="page">
       <div class="header">
-        <h1><a href='/search'>PLENTIFUL</a></h1>
+        <h1><a href='/'>PLENTIFUL</a></h1>
         <div class="tagline"><p>==Your Recipe Diary==</p></div>
       </div>
       {{!-- <div class="hero-head">
@@ -35,7 +35,7 @@
                 {{!-- <a class="nav-item" href=/home/all>
                   Home
                 </a> --}}
-                <a class="nav-item" href=/search>
+                <a class="nav-item" href=/>
                   Search
                 </a>
                 <a class="nav-item" href=/favrecipe id='mymeals'>
@@ -80,7 +80,7 @@
 
 <footer>
   {{!-- <div class ="nav"> --}}
-    {{!-- <a class="nav-item" href=/search>
+    {{!-- <a class="nav-item" href=/>
       Search
     </a>
     <a class="nav-item" href=/favrecipe id='mymeals'>
