--- a/public/css/search.css
+++ b/public/css/search.css
@@ -3,10 +3,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 6px 15px 6px 30px;
+  padding: 0px 15px 0px 5px;
   margin: 60px;
   height: 10%;
-  border-radius: 30px;
+  border-radius: 60px;
   background-color: rgba(232,202,155,0.4);
   color: white;
 }
@@ -14,7 +14,7 @@
 input#inputBox.search-box{
   border-style: none;
   background-color: rgba(232,202,155,0);
-  font-size: 2rem;
+  font-size: 3rem;
   text-align: center;
   color: white;
 }
@@ -25,6 +25,10 @@ input#inputBox.search-box{
 
 #ingredientsSearch{
   cursor: pointer;
+}
+
+#ingredientsSearch.material-icons{
+  font-size: 2em;
 }
 
 #inputBox:focus {
@@ -78,12 +82,13 @@ a {
     margin-top: 20px;
     margin-right: 25px;
     text-align: center;
+    cursor: pointer;
 }
 
 .resultContainer{
   column-count: 4;
   column-gap: 1em;
-  margin: 10px 150px;
+  margin: 10px 200px 40px 200px;
   border-bottom: 1px solid #545454;
   /*display: flex;*/
 }
@@ -113,7 +118,7 @@ a {
 
 
 /*for single recipe*/
-.one { /* Masonry bricks or child elements */
+.one {
     background-color: #eee;
     display: inline-block;
     width: 100%;
@@ -141,20 +146,24 @@ a {
 }
 
 ul {
-  /*text-align: left;
-  padding: 2px;*/
+  margin: 0 auto;
   list-style-type: circle;
 }
 
 li {
   text-align: left;
-  /*margin-left: 0;*/
 }
 
 .one.title{
   font-size: 2.0rem;
   display: inline;
   vertical-align: middle;
+}
+
+#addBtn{
+  color: red;
+  font-size: 2rem;
+  cursor: pointer;
 }
 
 .onerow{
@@ -168,77 +177,6 @@ li {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
-/*.masonry {
-    column-count: 4;
-    column-gap: 1em;
-    margin: 2px 20px;
-    border-bottom: 1px solid #545454;
-}*/
-
-
-/*.singleRecipeContainer{
-  display:table;
-  position: relative;
-  top: 40px;
-  margin-top: 40px;
-  margin-bottom: 0px;
-  margin-left: 100px;
-  margin-right: 100px;*/
-  /*display: flex;*/
-  /*flex-wrap: wrap;*/
-  /*align-items: flex-start;*/
-  /*justify-content: flex-start;*/
-  /*background-color:rgba(0, 0, 0, 0.7);
-  color: #FFFFFF;
-  padding: 20px;
-  border-radius: 10px;
-  border-style: solid;
-  border: 1px;
-}
-
-#recipePageLeft, #recipePageRight {
-    display: table-cell
-}
-#recipePageLeft{
-  width: 600px;
-}
-#recipePageRight{
-  width: 600px;
-}*/
-/*#bottomleft{
-  position: relative;
-  bottom: 0
-}*/
-/*#bottomleft p{
-  display: inline-block;
-  width: 150px;
-  font-size: 18px;
-}*/
-
-/*button{
-  margin: auto;
-  width: 200px;
-  height: 25px;
-  color: #FFFFFF;
-  background: #3dd28d;
-  padding: 20px;*/
-  /*font:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 20px;*/
-  /*cursor: pointer;
-  line-height: 10px;
-}*/
-
-
-
-/*.meat {
-  width: 300px;
-  height: 200px;
-}*/
-
-/*#recipePageLeft{
-    width: 600px;
-}*/
 
 span{
   text-decoration: underline;
