--- a/views/notused-search.handlebars
+++ b/views/notused-search.handlebars
@@ -46,5 +46,5 @@
         </div>
         <div id='recipePageRight'>
         </div>
-        <img src='/img/spinner.gif' id='spinner'></img>
+        <img src='/img/spinner.gif' id='spinner3'></img>
   </div>
