--- a/public/css/featuredOne.css
+++ b/public/css/featuredOne.css
@@ -11,10 +11,12 @@ a {
   display: inline-block;
   /*width: 100%;*/
   text-align: center;
-  margin: 0 20%;
-  border-bottom: 1px solid #545454;
-  font-size: 1rem;
-  padding: 50px
+  margin: 1% 33%;
+  /*border-bottom: 1px solid #545454;*/
+  font-size: 1.2rem;
+  padding: 10px;
+  box-shadow: 0 9px 0px 0px white, 0 -9px 0px 0px white, 12px 0 15px -4px rgba(19, 35, 47, 0.3), -12px 0 15px -4px rgba(19, 35, 47, 0.3);
+
 }
 
 .item .material-icons{
@@ -22,42 +24,48 @@ a {
 }
 
 .item p{
-  font-size: 1.5rem;
+  font-size: 2.0rem;
+  margin: 5px auto;
+  margin-bottom: 20px;
 }
 
 .item img{
-  max-width: 60%;
+  max-width: 100%;
   max-height: 60%;
   border-radius: 15px;
   display: block;
   margin: 0 auto;
+  padding: 5px;
 }
 
 ul {
-  margin: 0 20%;
+  margin: 7% 3%;
   list-style-type: circle;
+  line-height: 27px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #545454;
 }
 
 li {
   text-align: left;
 }
 
-.item.title{
-  font-size: 2rem;
-  display: inline;
-  vertical-align: middle;
-}
-
 #addBtn{
   color: red;
   font-size: 2rem;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20%;
 }
-
-span{
-  text-decoration: underline;
-  color: cyan;
-  font-size: 120%;
+#addBtn span.hidden{
+  visibility: hidden;
+  font-size: 0.5rem;
+  font-family: 'Lato', sans-serif;
+}
+#addBtn:hover span.hidden{
+  visibility: visible;
 }
 
 .row{
@@ -68,6 +76,4 @@ span{
   border-top: 1px solid #545454;
   border-bottom: 1px solid #545454;
   padding: 5px 1px;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
