--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,22 +1,54 @@
 /*search bar*/
+.searchback{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1),rgba(255, 255, 255, 0.1)),linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.3)), url('/img/fruit background.jpeg');
+  background-size: cover;
+  width: 80%;
+  height: 50%;
+  margin: 15px auto;
+  color: white;
+  letter-spacing: 5px;
+  line-height: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .search{
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0px 15px 0px 5px;
   margin: 60px;
+  max-width: 10%;
+  margin: 0 auto;
   height: 10%;
   border-radius: 60px;
-  background-color: rgba(232,202,155,0.4);
+  background-color: rgba(232,202,155,0.6);
   color: white;
+  transition-property: all;
+  transition-duration: 0.8s;
+  transition-delay: 0.2s;
+}
+
+.search:hover {
+    max-width: 80%;
+}
+.search:hover:after {
+    max-width: 80%;
 }
 
 input#inputBox.search-box{
   border-style: none;
   background-color: rgba(232,202,155,0);
-  font-size: 3rem;
+  font-size: 2rem;
   text-align: center;
+  font-family: 'Raleway', sans-serif;
   color: white;
+  max-width: 80%;
+}
+
+#inputBox:focus{
+  outline: none;
 }
 
 .material-icons{
@@ -31,25 +63,19 @@ input#inputBox.search-box{
   font-size: 2em;
 }
 
-#inputBox:focus {
-    /*background-color: black;*/
-    outline: none;
-    border-style: none;
-    /*color: #545454;*/
-    width: 100%;
-}
-
 h4{
   text-align: center;
   font-size: 2rem;
   margin: 20px auto;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 1000;
+  letter-spacing: 5px;
   line-height: 1.1;
   display: block;
   width: 100%;
 }
+
 
 a {
   text-decoration: none;
@@ -63,35 +89,44 @@ a {
   display: none;
 }
 
-#spinner3{
-  display: none;
+/*for search results*/
+.resultContainer{
+  column-count: 3;
+  /*column-gap: 2em;*/
+  margin: 20px 40px;
+  /*margin: 10px 200px 40px 200px;*/
+  border-bottom: 1px solid #545454;
 }
 
-/*for search results*/
 .imgDisplay img{
-  max-height: 200px;
+  margin: 2%;
+  width: 90%;
+  border-radius: 2px;
+  /*max-height: 200px;*/
 }
 
 .imgDisplay p{
-  margin: 2px;
+  font-size: 1.5rem;
+  display: inline;
+  text-align: center;
+  line-height: 30px;
+  padding: 3px;
 }
 
 .imgDisplay {
     background-color: #eee;
     display: inline-block;
-    margin-top: 20px;
+    margin: 0 2em 2em 0;
+    width: 90%;
+    /*margin-top: 20px;
     margin-right: 25px;
-    text-align: center;
+    text-align: center;*/
     cursor: pointer;
+    box-shadow: 12px 0 15px -4px rgba(19, 35, 47, 0.3), 0 12px 15px -4px rgba(19, 35, 47, 0.3);
+    overflow: visible;
 }
 
-.resultContainer{
-  column-count: 4;
-  column-gap: 1em;
-  margin: 10px 200px 40px 200px;
-  border-bottom: 1px solid #545454;
-  /*display: flex;*/
-}
+
 
 /*#next{
   display: none;
@@ -118,6 +153,75 @@ a {
 
 
 /*for single recipe*/
+.one {
+  background-color: #eee;
+  display: inline-block;
+  text-align: center;
+  margin: 1% 33%;
+  font-size: 1.2rem;
+  padding: 10px;
+  box-shadow: 0 9px 0px 0px white, 0 -9px 0px 0px white, 12px 0 15px -4px rgba(19, 35, 47, 0.3), -12px 0 15px -4px rgba(19, 35, 47, 0.3);
+}
+
+.new.material-icons{
+  font-size: 1.5rem;
+}
+
+p.onetitle{
+  font-size: 2.0rem;
+  margin: 5px auto;
+  margin-bottom: 20px;
+}
+
+.one img{
+  max-width: 100%;
+  max-height: 60%;
+  border-radius: 15px;
+  display: block;
+  margin: 5% auto;
+  padding: 5px;
+}
+
+.one ul {
+  margin: 7% 3%;
+  list-style-type: circle;
+  line-height: 27px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #545454;
+}
+
+.one li {
+  text-align: left;
+}
+
+#addBtn{
+  color: red;
+  font-size: 2rem;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20%;
+}
+#addBtn span.hidden{
+  visibility: hidden;
+  font-size: 0.5rem;
+  font-family: 'Lato', sans-serif;
+}
+#addBtn:hover span.hidden{
+  visibility: visible;
+}
+
+.onerow{
+  line-height: 20px;
+  display: inline;
+  vertical-align: middle;
+  margin: 8px auto;
+  border-top: 1px solid #545454;
+  border-bottom: 1px solid #545454;
+  padding: 5px 1px;
+}
+/*
 .one {
     background-color: #eee;
     display: inline-block;
@@ -182,7 +286,7 @@ span{
   text-decoration: underline;
   color: cyan;
   font-size: 120%;
-}
+}*/
 
 /*@media only screen and (max-width: 500px){
      .imgDisplay .textdiv{
@@ -207,6 +311,16 @@ span{
   column-gap: 1em;
   margin: 10px 20px;
   border-bottom: 1px solid #545454;
+}
+
+.featuredSection h4{
+  font-weight: 1000;
+  letter-spacing: 3px;
+  color: #B0B4A7;
+  border-top: 1px solid #B0B4A7;
+  border-bottom: 1px solid #B0B4A7;
+  max-width: 37%;
+  padding: 5px;
 }
 
 img {
@@ -253,7 +367,10 @@ img {
 .quotes{
   text-align: left;
   font-family: 'Arial', Helvetica, sans-serif;
-  font-size: 1em;
-  padding: 5px 1px;
-
+  font-size: 1.3em;
+  padding: 5px 20px 5px 10px;
+  margin: 0 0 1em 0;
+  width: 100%;
+  line-height: 25px;
+  background-color: white;
 }
