twilio api installed not working

--- a/views/ingredient.handlebars
+++ b/views/ingredient.handlebars
@@ -17,3 +17,7 @@
     {{/each}}
   </ul>
 </div>
+
+<form action='/ingredient/sendSms' method=post>
+  <button><i class="material-icons">perm_phone_msg</i></button>
+</form>
