--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" type="text/css" href="/css/search.css">
+<link rel="stylesheet" type="text/css" href="/css/home.css">
 
 <div class="searchback">
   <h4 class>Welcome to Plentiful</h4>
