--- a/public/css/ingredient.css
+++ b/public/css/ingredient.css
@@ -11,9 +11,10 @@ h4{
   margin: 20px auto;
 }
 
-/*.content{
-  margin-left: 40px;
-}*/
+.content{
+  display: inline-block;
+  margin: 0 20%;
+}
 
 ul{
 	list-style: none;
@@ -65,4 +66,8 @@ button{
   font-size: 1em;
   text-align: left;
   cursor: pointer;
+}
+
+form{
+  float: right;
 }
