--- a/views/userAuth/login.handlebars
+++ b/views/userAuth/login.handlebars
@@ -13,8 +13,7 @@
       <div class="tab-content">
 
         <div id="login">
-          <h2>{{loginflash}}</h2>
-          <h1>Welcome Back</h1>
+          <h1>{{loginflash}}</h1>
       <form action="/userAuth/login" method="post">
 
           <div class="field-wrap">
@@ -26,7 +25,7 @@
           <div class="field-wrap">
             <label>
             </label>
-            <input type="password" name='password' placeholder='Set a Password' required autocomplete="off"/>
+            <input type="password" name='password' placeholder='Enter Password' required autocomplete="off"/>
           </div>
 
           <button type="submit" class="button button-block"/>Log In</button>
