--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,7 +8,10 @@ body {
 }
 
 h1{
-  font-size: 28px;
+  font-size: 20px;
+  font-family: 'Lato', sans-serif;
+  color: #504D54;
+  margin-bottom: 5px;
 }
 
 a {
@@ -18,22 +21,28 @@ a {
   transition: .5s ease;
 }
 a:hover {
-  color: #F1D1A0;
+  color: #F66957;
 }
 
 .form {
-  background: #504D54;
+  /*background: #504D54;*/
+  background: #F3EFE6;
   padding: 40px;
-  max-width: 600px;
+  max-width: 400px;
   margin: 40px auto;
   border-radius: 4px;
   box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
+  font-family: 'Lato', sans-serif;
+}
+
+#login{
+  margin-top: 0px;
 }
 
 .tab-group {
   list-style: none;
   padding: 0;
-  margin: 0 0 40px 0;
+  margin: 0 0 20px 0;
 }
 .tab-group:after {
   content: "";
@@ -42,10 +51,11 @@ a:hover {
 }
 .tab-group li a {
   display: block;
+  /*margin-bottom: 0;*/
   text-decoration: none;
   padding: 15px;
   color: black;
-  font-size: 32px;
+  font-size: 20px;
   float: left;
   width: 50%;
   text-align: center;
@@ -56,10 +66,11 @@ a:hover {
   /*color: #a0b3b0;*/
 }
 .tab-group li a:hover {
-  background: #F66957;
+  background: #F1D1A0;
+  /*background: #F66957;*/
 }
 .tab-group .active a {
-  background: #F1D1A0;
+  background: #F66957;
 }
 
 .tab-content > div:last-child {
@@ -68,7 +79,6 @@ a:hover {
 
 h1 {
   text-align: center;
-  font-weight: 300;
   margin: 0 0 40px;
 }
 
@@ -82,11 +92,11 @@ label {
   transition: all 0.25s ease;
   -webkit-backface-visibility: hidden;
   pointer-events: none;
-  font-size: 22px;
+  font-size: 20px;
 }
 label .req {
   margin: 2px;
-  color: #F1D1A0;
+  color: #F66957;
 }
 
 label.active {
@@ -100,25 +110,25 @@ label.active .req {
 }
 
 label.highlight {
-  color: #F1D1A0;
+  color: #F66957;
 }
 
 input, textarea {
-  font-size: 22px;
+  font-size: 20px;
   display: block;
   width: 100%;
   height: 150%;
   padding: 5px 10px;
   background: none;
   background-image: none;
-  border: 1px solid #545454;
+  border: 1px solid #F1D1A0;
   border-radius: 0;
   -webkit-transition: border-color .25s ease, box-shadow .25s ease;
   transition: border-color .25s ease, box-shadow .25s ease;
 }
 input:focus, textarea:focus {
-  outline: 0;
-  border-color: #c6000;
+  outline: 5;
+  border-color: #c60000;
 }
 
 textarea {
@@ -150,212 +160,23 @@ textarea {
   outline: none;
   border-radius: 5px;
   padding: 15px 0;
-  font-size: 32px;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: .1em;
-  background: #F1D1A0;
-  /*color: #F1D1A0;*/
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-  -webkit-appearance: none;
-}
-.button:hover, .button:focus {
-  background: #F1D1A0;
-}
-
-.button-block {
-  display: block;
-  width: 100%;
-}
-
-.forgot {
-  margin-top: -20px;
-  text-align: right;
-}
-
-/*
-
-.is-dark {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1),rgba(255, 255, 255, 0.1)),linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.3)), url('/img/fruit background.jpeg');
-  background-size: cover;
-}
-
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-
-html {
-  overflow-y: scroll;
-}
-
-body {
-  background: #c1bdba;
-  font-family: 'Titillium Web', sans-serif;
-}
-
-a {
-  text-decoration: none;
-  color: #1ab188;
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
-}
-a:hover {
-  color: #179b77;
-}
-
-.form {
-  background: rgba(19, 35, 47, 0.9);
-  padding: 40px;
-  max-width: 600px;
-  margin: 40px auto;
-  border-radius: 4px;
-  box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
-}
-
-.tab-group {
-  list-style: none;
-  padding: 0;
-  margin: 0 0 40px 0;
-}
-.tab-group:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.tab-group li a {
-  display: block;
-  text-decoration: none;
-  padding: 15px;
-  background: rgba(160, 179, 176, 0.25);
-  color: #a0b3b0;
   font-size: 20px;
-  float: left;
-  width: 50%;
-  text-align: center;
-  cursor: pointer;
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
-}
-.tab-group li a:hover {
-  background: #179b77;
-  color: #ffffff;
-}
-.tab-group .active a {
-  background: #1ab188;
-  color: #ffffff;
-}
-
-.tab-content > div:last-child {
-  display: none;
-}
-
-h1 {
-  text-align: center;
-  color: #ffffff;
-  font-weight: 300;
-  margin: 0 0 40px;
-}
-
-label {
-  position: absolute;
-  -webkit-transform: translateY(6px);
-          transform: translateY(6px);
-  left: 13px;
-  color: rgba(255, 255, 255, 0.5);
-  -webkit-transition: all 0.25s ease;
-  transition: all 0.25s ease;
-  -webkit-backface-visibility: hidden;
-  pointer-events: none;
-  font-size: 22px;
-}
-label .req {
-  margin: 2px;
-  color: #1ab188;
-}
-
-label.active {
-  -webkit-transform: translateY(50px);
-          transform: translateY(50px);
-  left: 2px;
-  font-size: 14px;
-}
-label.active .req {
-  opacity: 0;
-}
-
-label.highlight {
-  color: #ffffff;
-}
-
-input, textarea {
-  font-size: 22px;
-  display: block;
-  width: 100%;
-  height: 100%;
-  padding: 5px 10px;
-  background: none;
-  background-image: none;
-  border: 1px solid #a0b3b0;
-  color: #ffffff;
-  border-radius: 0;
-  -webkit-transition: border-color .25s ease, box-shadow .25s ease;
-  transition: border-color .25s ease, box-shadow .25s ease;
-}
-input:focus, textarea:focus {
-  outline: 0;
-  border-color: #1ab188;
-}
-
-textarea {
-  border: 2px solid #a0b3b0;
-  resize: vertical;
-}
-
-.field-wrap {
-  position: relative;
-  margin-bottom: 40px;
-}
-
-.top-row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.top-row > div {
-  float: left;
-  width: 48%;
-  margin-right: 4%;
-}
-.top-row > div:last-child {
-  margin: 0;
-}
-
-.button {
-  border: 0;
-  outline: none;
-  border-radius: 0;
-  padding: 15px 0;
-  font-size: 2rem;
-  font-weight: 600;
+  /*font-weight: 600;*/
   text-transform: uppercase;
-  letter-spacing: .1em;
-  background: #1ab188;
-  color: #ffffff;
+  /*letter-spacing: .1em;*/
+  background: #F66957;
+  /*color: #F66957;*/
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   -webkit-appearance: none;
 }
 .button:hover, .button:focus {
-  background: #179b77;
+  background: #F66957;
 }
 
 .button-block {
   display: block;
   width: 100%;
+  text-transform: capitalize;
+  cursor: pointer;
 }
-
-/*.forgot {
-  margin-top: -20px;
-  text-align: right;
-}*/
