--- a/public/css/register.css
+++ b/public/css/register.css
@@ -79,7 +79,6 @@ a:hover {
 
 h1 {
   text-align: center;
-  /*font-weight: 300;*/
   margin: 0 0 40px;
 }
 
@@ -179,9 +178,5 @@ textarea {
   display: block;
   width: 100%;
   text-transform: capitalize;
-}
-
-.forgot {
-  margin-top: -20px;
-  text-align: right;
+  cursor: pointer;
 }
